# STM32F303_Stand

./: .cproject  .gitignore  .mxproject  .project  Dac_out_test.ioc  README.md
Controll_App/: CMakeLists.txt  appcontroller.cpp  appcontroller.h  main.cpp  main.qml  protocol.h  qml.qrc
Controll_App/qml/: MainMenu.qml
Inc/: main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
Src/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
